data picture and game.html

--- a/public/game.html
+++ b/public/game.html
@@ -37,51 +37,51 @@
 
 	<table id="table" align="center" valign="middle">
 		<tr>
-			<td><p><img src="picture/card1.jpg" href = "javascript:void(0)" onclick ="picture('card1')" id="card1" align="bottom" width="80%" height="200%"></p></td>
-			<td><p><img src="picture/card2.jpg" href = "javascript:void(0)" onclick ="picture('card2')" id="card2" align="bottom" width="80%" height="200%"></p></td>
-			<td><p><img src="picture/card3.jpg" href = "javascript:void(0)" onclick ="picture('card3')" id="card3" align="bottom" width="80%" height="200%"></p></td>
-			<td><p><img src="picture/card4.jpg" href = "javascript:void(0)" onclick ="picture('card4')" id="card4" align="bottom" width="80%" height="200%"></p></td>
-			<td><p><img src="picture/card5.jpg" href = "javascript:void(0)" onclick ="picture('card5')" id="card5" align="bottom" width="80%" height="200%"></p></td>
+			<td><p><img src="picture/bulbasaur.jpg" href = "javascript:void(0)" onclick ="picture('bulbasaur')" id="bulbasaur" align="bottom" width="80%" height="200%"></p></td>
+			<td><p><img src="picture/wartortle.jpg" href = "javascript:void(0)" onclick ="picture('wartortle')" id="wartortle" align="bottom" width="80%" height="200%"></p></td>
+			<td><p><img src="picture/pidgey.jpg" href = "javascript:void(0)" onclick ="picture('pidgey')" id="pidgey" align="bottom" width="80%" height="200%"></p></td>
+			<td><p><img src="picture/rattata.jpg" href = "javascript:void(0)" onclick ="picture('rattata')" id="rattata" align="bottom" width="80%" height="200%"></p></td>
+			<td><p><img src="picture/pikachu.jpg" href = "javascript:void(0)" onclick ="picture('pikachu')" id="pikachu" align="bottom" width="80%" height="200%"></p></td>
 		</tr>
 		<tr>
-			<td><p><img src="picture/card6.jpg" href = "javascript:void(0)" onclick ="picture('card6')" id="card6" align="bottom" width="80%" height="200%"></p></td>
-			<td><p><img src="picture/card7.jpg" href = "javascript:void(0)" onclick ="picture('card7')" id="card7" align="bottom" width="80%" height="200%"></p></td>
-			<td><p><img src="picture/card8.jpg" href = "javascript:void(0)" onclick ="picture('card8')" id="card8" align="bottom" width="80%" height="200%"></p></td>
-			<td><p><img src="picture/card9.jpg" href = "javascript:void(0)" onclick ="picture('card9')" id="card9" align="bottom" width="80%" height="200%"></p></td>
-			<td><p><img src="picture/card10.jpg" href = "javascript:void(0)" onclick ="picture('card10')" id="card10" align="bottom" width="80%" height="200%"></p></td>
+			<td><p><img src="picture/raichu.jpg" href = "javascript:void(0)" onclick ="picture('raichu')" id="raichu" align="bottom" width="80%" height="200%"></p></td>
+			<td><p><img src="picture/nidoran.jpg" href = "javascript:void(0)" onclick ="picture('nidoran')" id="nidoran" align="bottom" width="80%" height="200%"></p></td>
+			<td><p><img src="picture/nidorina.jpg" href = "javascript:void(0)" onclick ="picture('nidorina')" id="nidorina" align="bottom" width="80%" height="200%"></p></td>
+			<td><p><img src="picture/clefairy.jpg" href = "javascript:void(0)" onclick ="picture('clefairy')" id="clefairy" align="bottom" width="80%" height="200%"></p></td>
+			<td><p><img src="picture/jigglypuff.jpg" href = "javascript:void(0)" onclick ="picture('jigglypuff')" id="jigglypuff" align="bottom" width="80%" height="200%"></p></td>
 		</tr>
 		<tr>
-			<td><p><img src="picture/card11.jpg" href = "javascript:void(0)" onclick ="picture('card11')" id="card11" align="bottom" width="80%" height="200%"></p></td>
-			<td><p><img src="picture/card12.jpg" href = "javascript:void(0)" onclick ="picture('card12')" id="card12" align="bottom" width="80%" height="200%"></p></td>
-			<td><p><img src="picture/card13.jpg" href = "javascript:void(0)" onclick ="picture('card13')" id="card13" align="bottom" width="80%" height="200%"></p></td>
-			<td><p><img src="picture/card14.jpg" href = "javascript:void(0)" onclick ="picture('card14')" id="card14" align="bottom" width="80%" height="200%"></p></td>
-			<td><p><img src="picture/card15.jpg" href = "javascript:void(0)" onclick ="picture('card15')" id="card15" align="bottom" width="80%" height="200%"></p></td>
+			<td><p><img src="picture/wigglytuff.jpg" href = "javascript:void(0)" onclick ="picture('wigglytuff')" id="wigglytuff" align="bottom" width="80%" height="200%"></p></td>
+			<td><p><img src="picture/oddish.jpg" href = "javascript:void(0)" onclick ="picture('oddish')" id="oddish" align="bottom" width="80%" height="200%"></p></td>
+			<td><p><img src="picture/diglett.jpg" href = "javascript:void(0)" onclick ="picture('diglett')" id="diglett" align="bottom" width="80%" height="200%"></p></td>
+			<td><p><img src="picture/meowth.jpg" href = "javascript:void(0)" onclick ="picture('meowth')" id="meowth" align="bottom" width="80%" height="200%"></p></td>
+			<td><p><img src="picture/psyduck.jpg" href = "javascript:void(0)" onclick ="picture('psyduck')" id="psyduck" align="bottom" width="80%" height="200%"></p></td>
 		</tr>
 		<tr>
-			<td><p><img src="picture/card16.jpg" href = "javascript:void(0)" onclick ="picture('card16')" id="card16" align="bottom" width="80%" height="200%"></p></td>
-			<td><p><img src="picture/card17.jpg" href = "javascript:void(0)" onclick ="picture('card17')" id="card17" align="bottom" width="80%" height="200%"></p></td>
-			<td><p><img src="picture/card18.jpg" href = "javascript:void(0)" onclick ="picture('card18')" id="card18" align="bottom" width="80%" height="200%"></p></td>
-			<td><p><img src="picture/card19.jpg" href = "javascript:void(0)" onclick ="picture('card19')" id="card19" align="bottom" width="80%" height="200%"></p></td>
-			<td><p><img src="picture/card20.jpg" href = "javascript:void(0)" onclick ="picture('card20')" id="card20" align="bottom" width="80%" height="200%"></p></td>
+			<td><p><img src="picture/poliwag.jpg" href = "javascript:void(0)" onclick ="picture('poliwag')" id="poliwag" align="bottom" width="80%" height="200%"></p></td>
+			<td><p><img src="picture/seel.jpg" href = "javascript:void(0)" onclick ="picture('seel')" id="seel" align="bottom" width="80%" height="200%"></p></td>
+			<td><p><img src="picture/dewgong.jpg" href = "javascript:void(0)" onclick ="picture('dewgong')" id="dewgong" align="bottom" width="80%" height="200%"></p></td>
+			<td><p><img src="picture/gastly.jpg" href = "javascript:void(0)" onclick ="picture('gastly')" id="gastly" align="bottom" width="80%" height="200%"></p></td>
+			<td><p><img src="picture/electrode.jpg" href = "javascript:void(0)" onclick ="picture('electrode')" id="electrode" align="bottom" width="80%" height="200%"></p></td>
 		</tr>
 		<tr>
-			<td><p><img src="picture/card21.jpg" href = "javascript:void(0)" onclick ="picture('card21')" id="card21" align="bottom" width="80%" height="200%"></p></td>
-			<td><p><img src="picture/card22.jpg" href = "javascript:void(0)" onclick ="picture('card22')" id="card22" align="bottom" width="80%" height="200%"></p></td>
-			<td><p><img src="picture/card23.jpg" href = "javascript:void(0)" onclick ="picture('card23')" id="card23" align="bottom" width="80%" height="200%"></p></td>
-			<td><p><img src="picture/card24.jpg" href = "javascript:void(0)" onclick ="picture('card24')" id="card24" align="bottom" width="80%" height="200%"></p></td>
-			<td><p><img src="picture/card25.jpg" href = "javascript:void(0)" onclick ="picture('card25')" id="card25" align="bottom" width="80%" height="200%"></p></td>
+			<td><p><img src="picture/chansey.jpg" href = "javascript:void(0)" onclick ="picture('chansey')" id="chansey" align="bottom" width="80%" height="200%"></p></td>
+			<td><p><img src="picture/lapras.jpg" href = "javascript:void(0)" onclick ="picture('lapras')" id="lapras" align="bottom" width="80%" height="200%"></p></td>
+			<td><p><img src="picture/ditto.jpg" href = "javascript:void(0)" onclick ="picture('ditto')" id="ditto" align="bottom" width="80%" height="200%"></p></td>
+			<td><p><img src="picture/eevee.jpg" href = "javascript:void(0)" onclick ="picture('eevee')" id="eevee" align="bottom" width="80%" height="200%"></p></td>
+			<td><p><img src="picture/dragonair.jpg" href = "javascript:void(0)" onclick ="picture('dragonair')" id="dragonair" align="bottom" width="80%" height="200%"></p></td>
 		</tr>
 		<tr>
-			<td><p><img src="picture/card26.jpg" href = "javascript:void(0)" onclick ="picture('card26')" id="card26" align="bottom" width="80%" height="200%"></p></td>
-			<td><p><img src="picture/card27.jpg" href = "javascript:void(0)" onclick ="picture('card27')" id="card27" align="bottom" width="80%" height="200%"></p></td>
-			<td><p><img src="picture/card28.jpg" href = "javascript:void(0)" onclick ="picture('card28')" id="card28" align="bottom" width="80%" height="200%"></p></td>
-			<td><p><img src="picture/card29.jpg" href = "javascript:void(0)" onclick ="picture('card29')" id="card29" align="bottom" width="80%" height="200%"></p></td>
-			<td><p><img src="picture/card30.jpg" href = "javascript:void(0)" onclick ="picture('card30')" id="card30" align="bottom" width="80%" height="200%"></p></td>
+			<td><p><img src="picture/chikorita.jpg" href = "javascript:void(0)" onclick ="picture('chikorita')" id="chikorita" align="bottom" width="80%" height="200%"></p></td>
+			<td><p><img src="picture/crobat.jpg" href = "javascript:void(0)" onclick ="picture('crobat')" id="crobat" align="bottom" width="80%" height="200%"></p></td>
+			<td><p><img src="picture/pichu.jpg" href = "javascript:void(0)" onclick ="picture('pichu')" id="pichu" align="bottom" width="80%" height="200%"></p></td>
+			<td><p><img src="picture/cleffa.jpg" href = "javascript:void(0)" onclick ="picture('cleffa')" id="card29" align="bottom" width="80%" height="200%"></p></td>
+			<td><p><img src="picture/lgglybuff.jpg" href = "javascript:void(0)" onclick ="picture('lgglybuff')" id="lgglybuff" align="bottom" width="80%" height="200%"></p></td>
 		</tr>
 		<tr>
-			<td><p><img src="picture/card31.jpg" href = "javascript:void(0)" onclick ="picture('card31')" id="card31" align="bottom" width="80%" height="200%"></p></td>
-			<td><p><img src="picture/card32.jpg" href = "javascript:void(0)" onclick ="picture('card32')" id="card32" align="bottom" width="80%" height="200%"></p></td>
-			<td><p><img src="picture/card33.jpg" href = "javascript:void(0)" onclick ="picture('card33')" id="card33" align="bottom" width="80%" height="200%"></p></td>
+			<td><p><img src="picture/sylveon.jpg" href = "javascript:void(0)" onclick ="picture('sylveon')" id="sylveon" align="bottom" width="80%" height="200%"></p></td>
+			<td><p><img src="picture/sentret.jpg" href = "javascript:void(0)" onclick ="picture('sentret')" id="sentret" align="bottom" width="80%" height="200%"></p></td>
+			<td><p><img src="picture/furret.jpg" href = "javascript:void(0)" onclick ="picture('furret')" id="furret" align="bottom" width="80%" height="200%"></p></td>
 		</tr>
 
 		<script type="text/javascript">
