--- a/public/game.html
+++ b/public/game.html
@@ -153,18 +153,14 @@
 			<div id="introduce" style="float:left;display:inline;">
 				<p>Height: </p>
 				<p>Weight: </p>
-				<p>Egg Group: </p>
-				<p>Abilities: </p>
-				<p>EVs: </p>
+				<p>Type:   </p>
 				<p>Catch Rate: </p>
 				<p>Gender Ratio: </p>
 			</div>
 			<div id="introduce_data" style="float:left;display:inline;">
 				<p>2.3 ft</p>
 				<p>15.21 lbs</p>
-				<p>Plant,Monster</p>
-				<p>Chlorophyll,Overgrow</p>
-				<p>1 Special Attack</p>
+				<p>grass </p>
 				<p>18%</p>
 				<p>12.5/87.5</p>
 			</div>
