--- a/public/confirmed-game/index.html
+++ b/public/confirmed-game/index.html
@@ -15,8 +15,10 @@
 <body>
 
  <div class="timeplane" id="timeplane">TIME: <span id="livetime"></span></div>
- 
- <button id="restart">restart</button>
+ <button id="account" class="float-left submit-button" >Info</button>
+ <button id="back" class="float-left submit-button" >Back</button>
+ <input type="button" value="Logout"  class="float-left submit-button" id="logout" >
+ <button id="restart">Restart</button>
 
 <div class="board">
 
