--- a/public/homepage.html
+++ b/public/homepage.html
@@ -116,6 +116,13 @@
 <!--<form action="/rank check" method="post" >
 <input type="submit" value="update" />
 </form>-->
+<form action="/poke" method="post" >
+<input type="submit" value="poke api test" />
+</form>
+
+
+
+
 
 <button id="account" class="float-left submit-button" >Info</button>
 
