--- a/public/login.html
+++ b/public/login.html
@@ -43,7 +43,7 @@
                     }
                 },
                 error:function(){
-                    alert("Internet error!");
+                    alert("login error!");
                 }
             })
         });
