--- a/public/game.html
+++ b/public/game.html
@@ -192,6 +192,7 @@
 				document.getElementById('fade').style.display='block';
 
 				var name,hp,attk,def,sattk,sdef,spd,ht,wt,type,des;
+
 	            $.ajax({
 	                type:"post",
 	                url:"/poke",
@@ -199,17 +200,17 @@
 	                success:function(data){
 	                    if(data.status==0){
 	                        name=n;
-	                        // hp= data.hp;
-	                        // attk=data.attk;
-	                        // def=data.def;
-	                        // sattk=data.sattk;
-	                        // sdef=data.sdef;
-	                        // spd=data.spd;
+	                        hp= data.hp;
+	                        attk=data.attk;
+	                        def=data.def;
+	                        sattk=data.sattk;
+	                        sdef=data.sdef;
+	                        spd=data.spd;
 
-	                        // ht=data.ht;
-	                        // wt=data.wt;
-	                        // type=data.type;
-	                        // des=data.des;
+	                        ht=data.ht;
+	                        wt=data.wt;
+	                        type=data.type;
+	                        des=data.des;
 	                        alert("success");
 	                    }
 	                    else{
@@ -219,8 +220,7 @@
 	                error:function(){
 	                    alert("getpoke error!");
 	                }
-	            })
-
+	            });
 
 			}
 		</script>
